--- a/ext-app/src/css/rfq.css
+++ b/ext-app/src/css/rfq.css
@@ -1,18 +1,8 @@
+html, body {
+    font-family: SymphonyLato,"Hiragino Kaku Gothic Pro",Meiryo,"Yu Gothic Medium",sans-serif;
+}
+
 p { margin: 0 }
-
-.disable-overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(255, 255, 255, 0.5);
-    z-index: 1;
-}
-
-.hidden {
-    display: none;
-}
 
 th, td {
     border: 1px solid black;
@@ -38,40 +28,72 @@ input.rfq-display-segment {
     padding: 0;
 }
 
-.rfq-action-button {
-    margin: 4px;
-    padding: 4px 8px;
-    line-height: 1.5;
 
-    font-size: 16px;
-    text-align: center;
-    vertical-align: middle;
-    box-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+/*******/
 
+#rfq-container {
+    border: 2px solid #84bd00;
+}
+
+/* rfq header */
+.rfq-header-section {
+    display: flex;
+    background: rgb(26, 50, 71);
+}
+
+.citi-logo-wrapper {
+    padding: 5px 10px;
+    width: 60px;
+}
+.citi-logo-wrapper > img {
+    width: 100%;
+}
+
+.rfq-info-wrapper {
+    color: #babec4;
+}
+
+.rfq-id-small {
+    color: #97999b;
+    font-size: 12px;
+}
+
+/* rfq body */
+.rfq-body-section {
+    display: flex;
+    background: #113f65;
+    color: #babec4;
+}
+
+.rfq-body {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.rfq-body.right {
+    align-items: flex-end;
+    padding: 0 4px;
+}
+
+.notional-wrapper {
+    font-weight: bold;
+}
+
+.price-wrapper {
+    font-size: 28px;
+}
+
+input {
+    width: 100%;
+    background: #161a1d;
+    border: 1px solid;
+    border-color: rgba(0, 0, 0, 0.6) rgba(255, 255, 255, 0.15) rgba(255, 255, 255, 0.15) rgba(0, 0, 0, 0.6);
     border-radius: 4px;
-    border: 1px solid transparent;
-
-    white-space: nowrap;
-    user-select: none;
+    color: #d3d9de;
+    outline: none;
 }
-
-.rfq-action-button.default {
-    color: #00bdf2;
-    background-color: #2b333b;
-    border-color: rgba(255, 255, 255, 0.15) rgba(0, 0, 0, 0.6) rgba(0, 0, 0, 0.6) rgba(255, 255, 255, 0.15);
-}
-.rfq-action-button.default:hover {
-    color: #59dbff;
-    background-color: #364049;
-    border-color: transparent;
-}
-
-.rfq-action-button.primary {
-    color: #fff;
-    background-color: #00bdf2;
-    border-color: rgba(255, 255, 255, 0.15) rgba(0, 0, 0, 0.6) rgba(0, 0, 0, 0.6) rgba(255, 255, 255, 0.15);
-}
-.rfq-action-button.primary:hover {
-    background-color: #59bdff;
-    border-color: transparent;
+input:focus {
+    border-color: #00bdf2;
 }
