--- a/ext-app/src/css/rfq.css
+++ b/ext-app/src/css/rfq.css
@@ -1,11 +1,40 @@
 html, body {
     font-family: SymphonyLato, "Hiragino Kaku Gothic Pro", Meiryo, "Yu Gothic Medium", sans-serif;
+    color: #babec4;
+}
+
+/* buttons */
+.rfq-button-container {
+    background: rgb(26, 50, 71);
+}
+
+.rfq-action-button {
+    margin: 2px 8px;
+    padding: 4px 8px;
+    border-radius: 4px;
+    border: 2px solid;
+    background: transparent;
+    font-size: 14px;
+    font-weight: bold;
+    color: inherit;
+    outline: none;
+    cursor: pointer;
+}
+
+.rfq-action-button.cancel {
+    color: #b60000;
+    border-color: #b60000;
+}
+
+#rfq-container {
+    width: 600px;
     border: 2px solid #84bd00;
 }
 
 /* rfq header */
 .rfq-header-section {
     display: flex;
+    flex-wrap: wrap;
     background: rgb(26, 50, 71);
 }
 
@@ -18,12 +47,21 @@ html, body {
 }
 
 .rfq-info-wrapper {
+    flex: 1;
     color: #babec4;
 }
 
 .rfq-id-small {
     color: #97999b;
     font-size: 12px;
+}
+
+.post-header-row {
+    width: 100%;
+    display: flex;
+}
+.post-header-label {
+    flex: 1;
 }
 
 /* rfq body */
@@ -50,16 +88,21 @@ html, body {
 }
 
 .price-wrapper {
+    width: 150px;
     font-size: 28px;
+    text-align: right;
 }
 
 input {
-    width: 100%;
+    width: calc(100% - 8px);
+    padding: 0 4px;
     background: #161a1d;
     border: 1px solid;
     border-color: rgba(0, 0, 0, 0.6) rgba(255, 255, 255, 0.15) rgba(255, 255, 255, 0.15) rgba(0, 0, 0, 0.6);
     border-radius: 4px;
+    font-size: inherit;
     color: #d3d9de;
+    text-align: inherit;
     outline: none;
 }
 input:focus {
