add completed state UI

--- a/ext-app/src/css/rfq.css
+++ b/ext-app/src/css/rfq.css
@@ -20,10 +20,40 @@ html, body {
     outline: none;
     cursor: pointer;
 }
+.rfq-action-button:hover {
+    color: #fff !important;
+}
 
-.rfq-action-button.cancel {
+.rfq-action-button.green {
+    color: #84bd00;
+    border-color: #84bd00;
+}
+.rfq-action-button.green:hover {
+    background: #84bd00;
+}
+
+.rfq-action-button.amber {
+    color: #ed8b00;
+    border-color: #ed8b00;
+}
+.rfq-action-button.amber:hover {
+    background: #ed8b00;
+}
+
+.rfq-action-button.cyan {
+    color: #00bdf2;
+    border-color: #00bdf2;
+}
+.rfq-action-button.cyan:hover {
+    background: #00bdf2;
+}
+
+.rfq-action-button.red {
     color: #b60000;
     border-color: #b60000;
+}
+.rfq-action-button.red:hover {
+    background: #b60000;
 }
 
 #rfq-container {
@@ -36,6 +66,14 @@ html, body {
     display: flex;
     flex-wrap: wrap;
     background: rgb(26, 50, 71);
+}
+
+.pre-header-row {
+    width: 100%;
+    background: #97999b;
+    text-align: center;
+    font-weight: bold;
+    color: #eee;
 }
 
 .citi-logo-wrapper {
