--- a/ext-app/src/css/rfq.css
+++ b/ext-app/src/css/rfq.css
@@ -57,8 +57,10 @@ html, body {
 }
 
 #rfq-container {
+    background: #113f65;
     max-width: 600px;
     border: 2px solid #84bd00;
+    padding: 5px;
 }
 
 /* rfq header */
