--- a/ext-app/src/css/rfq.css
+++ b/ext-app/src/css/rfq.css
@@ -1,8 +1,15 @@
+@font-face {
+    font-family: SymphonyLato;
+    src: url(Lato-Regular.woff2);
+}
+
 html, body {
     font-family: SymphonyLato, "Hiragino Kaku Gothic Pro", Meiryo, "Yu Gothic Medium", sans-serif;
     color: #babec4;
 }
 
+
+  
 /* buttons */
 .rfq-button-container {
     background: rgb(26, 50, 71);
@@ -109,6 +116,7 @@ html, body {
     display: flex;
     background: #113f65;
     color: #babec4;
+    padding: 10px 5px;
 }
 
 .rfq-body {
