change elements form direction to radio buttons

--- a/ext-app/src/css/rfq.css
+++ b/ext-app/src/css/rfq.css
@@ -1,6 +1,7 @@
 html, body {
     font-family: SymphonyLato, "Hiragino Kaku Gothic Pro", Meiryo, "Yu Gothic Medium", sans-serif;
     color: #babec4;
+    overflow: hidden;
 }
 
 /* buttons */
